environments/staging/codebloom/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codebloom
  namespace: staging
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  rules:
    - host: stg.k8s.codebloom.patinanetwork.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: codebloom
                port:
                  number: 80
